--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,7 @@
                                     <th>이전 비중(%)</th>
                                     <th>현재 비중(%)</th>
                                     <th>증감(%)</th>
+                                    <th>평가금액</th>
                                     <th>상태</th>
                                 </tr>
                             </thead>
