--- a/static/css/style.css
+++ b/static/css/style.css
@@ -199,8 +199,14 @@ header h1 {
 #holdings-table td:nth-child(1),
 #holdings-table td:nth-child(3),
 #holdings-table td:nth-child(4),
-#holdings-table td:nth-child(5) {
+#holdings-table td:nth-child(5),
+#holdings-table td:nth-child(6) {
     text-align: right;
+}
+
+.amount-cell {
+    font-weight: 500;
+    color: #2c3e50;
 }
 
 .status-new { color: var(--success-color); font-weight: 500; }
